# 2021-02-11: i, c, d, e, f, n, o
	* Added: coffined, coif, coifed, coiffed, deice, deiced, deicide, dino, ecocide, edenic, fifed, foodie, indie
	* Removed: finn, iodide, odin

# 2021-02-10: c, a, g, i, l, n, w
	* Added: calla
	* Removed: anglican, gallic

# 2021-02-09: k, c, e, h, i, n, t
	* Added: tiki
	* Removed: checkin, chink, kent

# 2021-02-06: o, a, e, h, m, n, p
	* Added: homophone, mammon, nope, oomph, opah, peon, phenom, phono, pome, pompano, pompom, pone, poppa
	* Removed: apnoea, noah, phonon

# 2021-02-04: t, g, n, o, r, u, w
	* Added: outro, outworn, rotgut, roto, runout, toro, tort, wonton, woot, wort
	* Removed: toronto

# 2021-02-03: h, a, e, l, p, t, y
	* Added: aleph, halal, heeltap, heptathlete, telehealth, telepath
	* Removed: haha

# 2021-02-01: o, a, g, i, l, n, y
	* Added: aioli, analog, goggly, gonna, googling, googol, goony, lingo, llano, login, logy, lollygag, lollygagging, longan, nonagon, nonagonal, nonillion, oniony, onlay, oolong, yogini
	* Removed: agio, angola, angolan, gaol, ingoing, ionian, lino, lyon, ngoing, nogging, oology

# 2021-01-31: o, b, h, i, l, r, y
	* Added: blobby, boho, loblolly, olio, roil, roily, yoohoo
	* Removed: bobby, holily, lolly, ohio, yoyo

# 2021-01-30: h, c, d, e, i, k, l
	* Added: chichi, chicle, cichlid, cliched, hick, hied, lech, leeched
	* Removed: ceilidh, cheeked, chilli, delhi, lichee, lichi

# 2021-01-29: t, e, g, h, n, o, u
	* Added: nonet, outgone, outgun, outthought, tong, toon, tote, tutee, unguent, unthought, untune
	* Removed: goethe, huguenot, nett, teehee, togo

# 2021-01-28: c, a, d, g, i, n, r
	* Added: acing, arcadian, cadging, canid, canna, cirri, crania, indica, indicia, narc, niacin, ricin, ricing
	* Removed: accra, acidrain, arcading, cain, canaan, canada, canadian, cran, inca

# 2021-01-27: e, a, b, g, m, t, y
	* Added: agate, ameba, amebae, begem, eggy, mage, matey, meme, meta, mete, yegg
	* Removed: beamy, byebye, eatage

# 2021-01-25: m, a, d, i, l, o, r